--- a/001/style.css
+++ b/001/style.css
@@ -6,4 +6,12 @@ html, body {
     border: 1px solid black;
     padding: 10px;
     width: 200px;
+    margin-bottom: 40px;
+}
+
+.second {
+    border: 1px solid black;
+    padding: 10px;
+    width: 300px;
+    display: table-cell;
 }
