--- a/001/style.css
+++ b/001/style.css
@@ -6,7 +6,7 @@ html, body {
     border: 1px solid black;
     padding: 10px;
     width: 200px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .second {
@@ -14,4 +14,9 @@ html, body {
     padding: 10px;
     width: 300px;
     display: table-cell;
+}
+
+.third {
+    margin-top: 30px;
+    width: 500px;
 }
